[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-r2-backup"
version = "1.0.5"
description = "PostgreSQL backup tool for Cloudflare R2 (S3 Compatible)"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Aman" }
]

license = { text = "MIT" }

dependencies = [
    "boto3",
    "python-dotenv",
    "schedule",
    "py7zr"
]

[project.urls]
Homepage = "https://github.com/BigDaddyAman/pg-r2-backup"
Repository = "https://github.com/BigDaddyAman/pg-r2-backup"
Issues = "https://github.com/BigDaddyAman/pg-r2-backup/issues"

[tool.setuptools]
packages = ["cli"]
py-modules = ["main"]

[project.scripts]
pg-r2-backup = "cli.cli:main"
