[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-s3-multi-backup"
version = "2.0.0"
description = "PostgreSQL backup automation tool for one or more S3-compatible destinations"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Aman" }
]

license = "MIT"

dependencies = [
    "boto3",
    "python-dotenv",
    "schedule",
    "py7zr"
]

[project.urls]
Homepage = "https://github.com/midego1/pg-s3-multi-backup"
Repository = "https://github.com/midego1/pg-s3-multi-backup"
Issues = "https://github.com/midego1/pg-s3-multi-backup/issues"

[tool.setuptools]
packages = ["cli"]
py-modules = ["main"]

[project.scripts]
pg-s3-multi-backup = "cli.cli:main"
